fix: Timeline description wrapping

--- a/src/components/Timeline/Timeline.module.css
+++ b/src/components/Timeline/Timeline.module.css
@@ -34,6 +34,7 @@
 
 .row {
   gap: 70px;
+  flex-wrap: nowrap;
 
   &::before {
     display: block;
